Changing .gitignore to ignore static files I don't want tracked, but I still need css and js

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 joshissexy.yml
-root/static
+root/static/files
+root/static/images
+root/static/movies
+root/static/scripts
+root/static/temp
+root/static/js/yui
